src/html/organisms/experience-tile.scss
.organisms__experience-tile {
  --atoms--card--color: var(--color-accent);
  --icon-width: 1.2em;
  --icon-height: 1.2em;
  --icon-color-primary: var(--color-secondary);
  --icon-color-secondary: var(--color-secondary);
  --icon-color-tertiary: transparent;

  .organisms__experience-tile__client-size {
    color: var(--color-secondary);
    white-space: nowrap;
  }

  .organisms__experience-tile__pipe-divider {
    padding-left: 4px;
    padding-right: 4px;
    color: var(--color-secondary);
    &:before {
      content: '|';
    }
  }
}

@mixin organisms__experience-tile--large {
  display: grid;
  --grid-columns-small-diagram: 1fr auto;
  --grid-columns-large-diagram: 1fr 1fr;
  grid-template-columns: var(--grid-columns-large-diagram);

  .organisms__experience-tile__summary { grid-area: summary; }
  .organisms__experience-tile__text { grid-area: text; }
  .organisms__experience-tile__tech-stack { grid-area: tech-stack; }

  grid-column-gap: 20px;

  grid-template-rows: auto 1fr;
  grid-template-areas:
    'summary summary'
    'text    tech-stack';

}
@mixin organisms__experience-tile--slim {
  .organisms__experience-tile__summary-header {
    margin-bottom: 4px;
  }
  .organisms__experience-tile__statistics {
    margin-top: 4px;
  }

  .organisms__experience-tile__role--with-client,
  .organisms__experience-tile__employer--with-client {
    display: none;
  }

  .organisms__experience-tile__summary {
    text-align: left;
  }
  .organisms__experience-tile__tech-stack {
    margin: 16px 0 4px 8px;
    max-width: 50%;
    float: right;
  }

  .organisms__experience-tile__comments {
    margin-bottom: 0;
  }
}

@mixin organisms__experience-tile--print {
  display: grid;
  grid-column-gap: 20px;
  grid-template-rows: auto 1fr;
  grid-template-columns: 1fr auto;
  grid-template-areas:
    'summary tech-stack'
    'text    tech-stack';

  .organisms__experience-tile__summary { grid-area: summary; }
  .organisms__experience-tile__text { grid-area: text; }
  .organisms__experience-tile__tech-stack { grid-area: tech-stack; }

  .organisms__experience-tile__role--with-client,
  .organisms__experience-tile__employer--with-client {
    display: none;
  }

  .organisms__experience-tile__statistics {
    margin-top: 4px;
  }

  .organisms__experience-tile__summary {
    text-align: left;
  }
  .organisms__experience-tile__tech-stack {
    margin-top: 16px;
  }

  .organisms__experience-tile__comments {
    margin-bottom: 0;
  }
  .organisms__experience-tile__summary-header {
    margin-bottom: 4px;
    margin-top: 0;
  }
}

.printer-friendly-version:not(:target) .organisms__experience-tile {
  @media (max-width: 799px) {
    @include organisms__experience-tile--slim;
  }
  @media (min-width: 800px) and (max-width: 999px) {
    @include organisms__experience-tile--large;
  }
  @media (min-width: 1000px) and (max-width: 1299px) {
    @include organisms__experience-tile--slim;
  }
  @media (min-width: 1300px) {
    @include organisms__experience-tile--large;
  }
  .organisms__experience-tile__summary {
    text-align: center;
  }

  .organisms__experience-tile__statistics {
    margin-top: 16px;
  }
}


.printer-friendly-version:target .organisms__experience-tile {
  @include organisms__experience-tile--print;
}

